# peek-kit

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
scripts/: check_permissions.py  install.sh  update.sh
src/peek_kit/: server.py
src/peek_kit/bridge/: accessibility.py  apps.py  input.py  menu.py  screenshot.py
src/peek_kit/models/: actions.py  elements.py  prd.py  reports.py
src/peek_kit/report/: prd_renderer.py  renderer.py
src/peek_kit/report/templates/: audit_report.md.j2  reverse_prd.md.j2
src/peek_kit/tools/: action.py  human.py  output.py  perception.py
src/peek_kit/utils/: auth_detection.py  encoding.py  permissions.py  retry.py
